# cargo-find-orphans

./: Cargo.toml
src/: find.rs  lib.rs  main.rs  run.rs  tests.rs
src/tests/err-lib-subdir-orphan/: Cargo.toml
src/tests/err-lib-subdir-orphan/src/: foo.rs  lib.rs
src/tests/err-lib-subdir-orphan/src/foo/: bar.rs
src/tests/err-main-top-level-orphan/: Cargo.toml
src/tests/ok-lib-cargo-skeleton/: Cargo.toml
src/tests/ok-main-cargo-skeleton/: Cargo.toml
