[package]
name = "cargo-find-orphans"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Find and optionally remove orphaned rust source files."

[dependencies]
anyhow = "1.0.70"
quote = "1.0.26"

[dependencies.anyhow-std]
path = "../anyhow-std"

[dependencies.syn]
version = "2.0.11"
features = [
  "full",
  "extra-traits",
]
